create script total cost

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="col-md-8">
 				<div data-rollList class="row"></div>
 			</div>
-			<div class="col-md-4">
+			<div data-cart="empty" class="col-md-4">
 
 				<!-- Корзина Пустая -->
 				<div class="card mb-4">
@@ -51,7 +51,7 @@
 
 							<div class="cart-total">
 								<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
-								<p><span class="h5">Итого:</span> <span class="total-price">330</span> <span class="rouble">₽</span></p>
+								<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 							</div>
 
 
